Module-02/Networks/web-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: web }
spec:
  replicas: 3
  selector: { matchLabels: { app: web }}
  template:
    metadata: { labels: { app: web }}
    spec:
      containers:
      - name: web
        image: avtandilko/web:1.0
        livenessProbe: { tcpSocket: { port: 8000 }}
        readinessProbe: { httpGet: { path: /index.html, port: 8000 } }
        volumeMounts: [{ name: app, mountPath: /app }]
      volumes: [{ name: app, emptyDir: {} }]
